--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,8 +14,9 @@
 }
 
 .App-header {
-  background-color: #375358;
+  background-image: url("bg.png");
   min-height: 100vh;
+  font-size:500%;
   display: flex;
   flex-direction: column;
   align-items: center;
