--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,11 +12,18 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+button {
+  background-color: rgb(117, 137, 143);
+  color:white;
+  border:0;
+  font-size: 24px;
+  cursor:pointer;
+  border-radius: 20%;
+}
 
 .App-header {
-  background-image: url("bg.png");
+  background-image:url("bg.png");
   min-height: 100vh;
-  font-size:500%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,7 +33,7 @@
 }
 
 .App-link {
-  color: #f49f16;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
